{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 2,
  "lineage": "8bd7279d-0d2d-dee0-81d0-29dcdb6026ac",
  "resources": [
    {
      "module": "module.hub_mgmt_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-mgmt-nsg",
            "location": "koreacentral",
            "name": "smp-hub-mgmt-nsg",
            "resource_group_name": "smp-hub-network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-002",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-001",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_mgmt_rt",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-mgmt-rt",
            "location": "koreacentral",
            "name": "smp-hub-mgmt-rt",
            "resource_group_name": "smp-hub-network-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "trustrt-01",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "trustrt-02",
                "next_hop_in_ip_address": "10.0.1.5",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_trusted_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-trusted-nsg",
            "location": "koreacentral",
            "name": "smp-hub-trusted-nsg",
            "resource_group_name": "smp-hub-network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-001",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-002",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_trusted_rt",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-trusted-rt",
            "location": "koreacentral",
            "name": "smp-hub-trusted-rt",
            "resource_group_name": "smp-hub-network-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "trustrt-01",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "trustrt-02",
                "next_hop_in_ip_address": "10.0.1.5",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_untrusted_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-untrusted-nsg",
            "location": "koreacentral",
            "name": "smp-hub-untrusted-nsg",
            "resource_group_name": "smp-hub-network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-001",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound_rule-003",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_untrusted_rt",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-untrusted-rt",
            "location": "koreacentral",
            "name": "smp-hub-untrusted-rt",
            "resource_group_name": "smp-hub-network-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "trustrt-01",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "trustrt-02",
                "next_hop_in_ip_address": "10.0.1.5",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet",
            "name": "smp-trusted-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "smp-hub-network-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "smp-hub-001-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.Sql.managedInstances",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Sql/managedInstances"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet",
            "name": "smp-untrusted-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "smp-hub-network-rg",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory"
            ],
            "virtual_network_name": "smp-hub-001-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet",
            "name": "smp-mgmt-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "smp-hub-network-rg",
            "virtual_network_name": "smp-hub-001-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "smp-mgmt-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet",
            "network_security_group_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-mgmt-nsg",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_nsg.azurerm_network_security_group.nsg",
            "module.hub_trusted_nsg.azurerm_network_security_group.nsg",
            "module.hub_untrusted_nsg.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "smp-trusted-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet",
            "network_security_group_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-trusted-nsg",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_nsg.azurerm_network_security_group.nsg",
            "module.hub_trusted_nsg.azurerm_network_security_group.nsg",
            "module.hub_untrusted_nsg.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "smp-untrusted-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet",
            "network_security_group_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-untrusted-nsg",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_nsg.azurerm_network_security_group.nsg",
            "module.hub_trusted_nsg.azurerm_network_security_group.nsg",
            "module.hub_untrusted_nsg.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "smp-mgmt-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet",
            "route_table_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-mgmt-rt",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_rt.azurerm_route_table.rt",
            "module.hub_trusted_rt.azurerm_route_table.rt",
            "module.hub_untrusted_rt.azurerm_route_table.rt",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "smp-trusted-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet",
            "route_table_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-trusted-rt",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_rt.azurerm_route_table.rt",
            "module.hub_trusted_rt.azurerm_route_table.rt",
            "module.hub_untrusted_rt.azurerm_route_table.rt",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "smp-untrusted-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet",
            "route_table_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/routeTables/smp-hub-untrusted-rt",
            "subnet_id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_mgmt_rt.azurerm_route_table.rt",
            "module.hub_trusted_rt.azurerm_route_table.rt",
            "module.hub_untrusted_rt.azurerm_route_table.rt",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "88fd3e2b-c857-4f72-97ec-f1dc395963c5",
            "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet",
            "location": "koreacentral",
            "name": "smp-hub-001-vnet",
            "resource_group_name": "smp-hub-network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-trusted-subnet",
                "name": "smp-trusted-subnet",
                "security_group": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-trusted-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-untrusted-subnet",
                "name": "smp-untrusted-subnet",
                "security_group": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-untrusted-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/virtualNetworks/smp-hub-001-vnet/subnets/smp-mgmt-subnet",
                "name": "smp-mgmt-subnet",
                "security_group": "/subscriptions/f07a573b-5972-45d5-96ff-9ed6f2db1a58/resourceGroups/smp-hub-network-rg/providers/Microsoft.Network/networkSecurityGroups/smp-hub-mgmt-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    }
  ]
}